--- a/src/views/ItemView.styl
+++ b/src/views/ItemView.styl
@@ -118,6 +118,7 @@ $navbarHeight = 3.6rem
     background-color rgba(27,31,35,.05)
     border-radius 3px
     line-height 1.6em
+    overflow auto
 
   pre > code
     color #fff
@@ -126,6 +127,7 @@ $navbarHeight = 3.6rem
     border-radius .4em
     font-family source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace
     background-color #282c34
+    overflow auto
 
   p, ul, ol
     line-height 1.7
