style: Update style -> code word-wrap

--- a/src/views/ItemView.styl
+++ b/src/views/ItemView.styl
@@ -126,6 +126,7 @@ $navbarHeight = 3.6rem
     border-radius .4em
     font-family source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace
     background-color #282c34
+    word-wrap none
 
   p, ul, ol
     line-height 1.7
