--- a/src/views/ItemView.styl
+++ b/src/views/ItemView.styl
@@ -119,7 +119,7 @@ $navbarHeight = 3.6rem
     line-height 1.6em
     word-wrap break-word
 
-  pre > code
+  .hljs
     color #fff
     font-size 1.2em
     padding 1em 1.5em
@@ -127,6 +127,7 @@ $navbarHeight = 3.6rem
     font-family source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace
     background-color #282c34
     word-wrap none
+    overflow auto
 
   p, ul, ol
     line-height 1.7
