style: Uodate style

--- a/src/views/ItemView.styl
+++ b/src/views/ItemView.styl
@@ -1,9 +1,11 @@
-// colors
-$accentColor = #3eaf7c
-$borderColor = #eaecef
+// // colors
+// $accentColor = #3eaf7c
+// $borderColor = #eaecef
 
-// layout
-$navbarHeight = 3.6rem
+// // layout
+// $navbarHeight = 3.6rem
+
+@require '../../lib/style/theme.styl'
 
 .item-view-header
   background-color #fff
@@ -40,114 +42,114 @@ $navbarHeight = 3.6rem
   padding 0
   margin 0
 
-.content
-  padding 2em 1em
-  a
-    font-weight 500
-    color $accentColor
-    text-decoration none
+// .content
+//   padding 2em 1em
+//   a
+//     font-weight 500
+//     color $accentColor
+//     text-decoration none
 
-  p a code
-    font-weight 400
-    color $accentColor
+//   p a code
+//     font-weight 400
+//     color $accentColor
 
-  kbd
-    background #eee
-    border solid 0.15rem #ddd
-    border-bottom solid 0.25rem #ddd
-    border-radius 0.15rem
-    padding 0 0.15em
+//   kbd
+//     background #eee
+//     border solid 0.15rem #ddd
+//     border-bottom solid 0.25rem #ddd
+//     border-radius 0.15rem
+//     padding 0 0.15em
 
-  blockquote
-    padding .1rem 1.5rem
-    font-size 1rem
-    color #2c3e50
-    border-left .25rem solid #dfe2e5
-    margin-left 0
-    background-color #f3f5f7
-    border-color #42b983
+//   blockquote
+//     padding .1rem 1.5rem
+//     font-size 1rem
+//     color #2c3e50
+//     border-left .25rem solid #dfe2e5
+//     margin-left 0
+//     background-color #f3f5f7
+//     border-color #42b983
 
-  ul, ol
-    padding-left 1.2em
+//   ul, ol
+//     padding-left 1.2em
 
-  strong
-    font-weight 600
+//   strong
+//     font-weight 600
 
-  h1, h2, h3, h4, h5, h6
-    font-weight 600
-    line-height 1.25
-    .content:not(.custom) > &
-      margin-top (0.5rem - $navbarHeight)
-      padding-top ($navbarHeight + 1rem)
-      margin-bottom 0
-      &:first-child
-        margin-top -1.5rem
-        margin-bottom 1rem
-        + p, + pre, + .custom-block
-          margin-top 2rem
-    &:hover .header-anchor
-      opacity: 1
+//   h1, h2, h3, h4, h5, h6
+//     font-weight 600
+//     line-height 1.25
+//     .content:not(.custom) > &
+//       margin-top (0.5rem - $navbarHeight)
+//       padding-top ($navbarHeight + 1rem)
+//       margin-bottom 0
+//       &:first-child
+//         margin-top -1.5rem
+//         margin-bottom 1rem
+//         + p, + pre, + .custom-block
+//           margin-top 2rem
+//     &:hover .header-anchor
+//       opacity: 1
 
-  h1
-    font-size 2.2rem
+//   h1
+//     font-size 2.2rem
 
-  h2
-    font-size 1.65rem
-    padding-bottom .3rem
-    border-bottom 1px solid $borderColor
+//   h2
+//     font-size 1.65rem
+//     padding-bottom .3rem
+//     border-bottom 1px solid $borderColor
 
-  h3
-    font-size 1.35rem
+//   h3
+//     font-size 1.35rem
 
-  a.header-anchor
-    font-size 0.85em
-    float left
-    margin-left -0.87em
-    padding-right 0.23em
-    margin-top 0.125em
-    opacity 0
-    &:hover
-      text-decoration none
+//   a.header-anchor
+//     font-size 0.85em
+//     float left
+//     margin-left -0.87em
+//     padding-right 0.23em
+//     margin-top 0.125em
+//     opacity 0
+//     &:hover
+//       text-decoration none
 
-  code, kbd
-    color #476582
-    padding .25rem .5rem
-    margin 0
-    font-size .85em
-    background-color rgba(27,31,35,.05)
-    border-radius 3px
-    line-height 1.6em
-    word-wrap break-word
+//   code, kbd
+//     color #476582
+//     padding .25rem .5rem
+//     margin 0
+//     font-size .85em
+//     background-color rgba(27,31,35,.05)
+//     border-radius 3px
+//     line-height 1.6em
+//     word-wrap break-word
 
-  .hljs
-    color #fff
-    font-size 1.2em
-    padding 1em 1.5em
-    border-radius .4em
-    font-family source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace
-    background-color #282c34
-    word-wrap none
-    overflow auto
+//   .hljs
+//     color #fff
+//     font-size 1.2em
+//     padding 1em 1.5em
+//     border-radius .4em
+//     font-family source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace
+//     background-color #282c34
+//     word-wrap none
+//     overflow auto
 
-  p, ul, ol
-    line-height 1.7
+//   p, ul, ol
+//     line-height 1.7
 
-  hr
-    border 0
-    border-top 1px solid $borderColor
+//   hr
+//     border 0
+//     border-top 1px solid $borderColor
 
-  table
-    border-collapse collapse
-    margin 1rem 0
+//   table
+//     border-collapse collapse
+//     margin 1rem 0
 
-  tr
-    border-top 1px solid #dfe2e5
-    &:nth-child(2n)
-      background-color #f6f8fa
+//   tr
+//     border-top 1px solid #dfe2e5
+//     &:nth-child(2n)
+//       background-color #f6f8fa
 
-  th, td
-    border 1px solid #dfe2e5
-    padding .6em 1em
+//   th, td
+//     border 1px solid #dfe2e5
+//     padding .6em 1em
   img
     max-width 100%
 
