--- a/lib/style/theme.styl
+++ b/lib/style/theme.styl
@@ -1,74 +1,5 @@
 @require './config'
 @require './code'
-// @require './custom-blocks'
-// @require './arrow'
-
-// html, body
-//   padding 0
-//   margin 0
-
-// body
-//   font-family -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif
-//   -webkit-font-smoothing antialiased
-//   -moz-osx-font-smoothing grayscale
-//   font-size 16px
-//   color $textColor
-
-// .page
-//   padding-left $sidebarWidth
-
-// .navbar
-//   position fixed
-//   z-index 20
-//   top 0
-//   left 0
-//   right 0
-//   height $navbarHeight
-//   background-color #fff
-//   box-sizing border-box
-//   border-bottom 1px solid $borderColor
-
-// .sidebar-mask
-//   position fixed
-//   z-index 9
-//   top 0
-//   left 0
-//   width 100vw
-//   height 100vh
-//   display none
-
-// .sidebar
-//   font-size 15px
-//   background-color #fff
-//   width $sidebarWidth
-//   position fixed
-//   z-index 10
-//   margin 0
-//   top $navbarHeight
-//   left 0
-//   bottom 0
-//   box-sizing border-box
-//   border-right 1px solid $borderColor
-//   overflow-y auto
-
-// .content:not(.custom)
-//   max-width $contentWidth
-//   margin 0 auto
-//   padding 2rem 2.5rem
-//   > *:first-child
-//     margin-top $navbarHeight
-//   a:hover
-//     text-decoration underline
-//   p.demo
-//     padding 1rem 1.5rem
-//     border 1px solid #ddd
-//     border-radius 4px
-//   img
-//     max-width 100%
-
-// .content.custom
-//   padding 0
-//   margin 0
 .content
   a
     font-weight 500
@@ -89,7 +20,7 @@
   blockquote
     font-size 1.2rem
     color #999
-    border-left .25rem solid #dfe2e5
+    border-left .25rem solid #42b983
     margin-left 0
     padding-left 1rem
 
@@ -157,26 +88,3 @@
   th, td
 		border 1px solid #dfe2e5
 		padding .6em 1em
-
-// .custom-layout
-//   padding-top $navbarHeight
-
-// .theme-container
-//   &.sidebar-open
-//     .sidebar-mask
-//       display: block
-//   &.no-navbar
-//     .content:not(.custom)
-//       h1, h2, h3, h4, h5, h6
-//         margin-top 1.5rem
-//         padding-top 0
-
-
-// @media (min-width: ($MQMobile + 1px))
-//   .theme-container.no-sidebar
-//     .sidebar
-//       display none
-//     .page
-//       padding-left 0
-
-// @require './mobile.styl'
