style: Change theme style

--- a/lib/style/config.styl
+++ b/lib/style/config.styl
@@ -1,6 +1,6 @@
 // colors
 $accentColor = #3eaf7c
-$textColor = #2c3e50
+$textColor = #c9cacc
 $borderColor = #eaecef
 $codeBgColor = #282c34
 $arrowBgColor = #ccc
