--- a/src/views/ItemView.styl
+++ b/src/views/ItemView.styl
@@ -1,14 +1,13 @@
 @require '../../lib/style/theme.styl'
 
 .item-view-header
-  background-color #fff
   padding 1.8em 2em 1em
   box-shadow 0 1px 2px rgba(0,0,0,.1)
   h1
-    display inline
     font-size 1.5em
     margin 0
     margin-right .5em
+    color #3eaf7c
   .labels, .meta, .meta a
     color #828282
   .meta a
@@ -17,25 +16,8 @@
     padding-right .4em
     line-height 2em
 
-.item-view-comments
-  background-color #fff
-  margin-top 10px
-
-.item-view-comments-header
-  margin 0
-  font-size 1.1em
-  padding 1em 0
-  position relative
-  .spinner
-    display inline-block
-    margin -15px 0
-
-.comment-children
-  list-style-type none
-  padding 0
-  margin 0
-
 .content
+  border 0
   img
     max-width 100%
 
