style: Update code style

--- a/lib/style/code.styl
+++ b/lib/style/code.styl
@@ -2,6 +2,8 @@
 
 .content
   code
+    border-radius 2px
+    border 1px dotted #666
     color lighten($textColor, 20%)
     padding 0.25rem 0.5rem
     margin 0
@@ -23,6 +25,7 @@
       padding 0
       background-color none
       border-radius 0
+      border 0
     &:before
       position absolute
       top 0.8em
