--- a/src/views/ItemView.styl
+++ b/src/views/ItemView.styl
@@ -2,7 +2,6 @@
 
 .item-view-header
   padding 1.8em 2em 1em
-  box-shadow 0 1px 2px rgba(0,0,0,.1)
   h1
     font-size 1.5em
     margin 0
@@ -10,13 +9,17 @@
     color #3eaf7c
   .labels, .meta, .meta a
     color #828282
-  .meta a
-    text-decoration underline
+  .meta
+    a
+      color #ccc
+    a:hover
+      color #d480aa
   .labels
     padding-right .4em
     line-height 2em
 
 .content
+  padding 0 2em
   border 0
   img
     max-width 100%
