--- a/src/views/ItemView.styl
+++ b/src/views/ItemView.styl
@@ -1,6 +1,6 @@
 @require '../../lib/style/theme.styl'
 
-.item-view-header
+.item-view-header, .item-view-footer
   padding 1.8em 2em 1em
   h1
     font-size 1.5em
@@ -17,6 +17,8 @@
   .labels
     padding-right .4em
     line-height 2em
+    a
+      color #828282
 
 .content
   padding 0 2em
@@ -24,7 +26,66 @@
   img
     max-width 100%
 
+#item-view-comments
+  padding 0 2em 1em
+
+.gt-container
+  font-weight 300
+  .gt-link
+    border-bottom 0
+  .gt-meta
+    border-bottom 0
+  .gt-svg
+    svg
+      fill #3eaf7c
+  .gt-ico-arrdown
+    .gt-svg
+      display none
+  .gt-comment-like
+    svg
+      fill #d480aa
+  .gt-ico-edit
+    svg
+      fill #aaa
+  .gt-header-textarea
+    background-color hsla(0,0%,100%,.1)
+    color #ddd
+  .gt-header-textarea:hover
+    background-color hsla(0,0%,100%,.1)
+  .gt-ico-text, .gt-comments-null, .gt-user-inner, .gt-action
+    color #828282
+  .gt-comments-null
+    font-size 14px
+    font-weight 400
+  .gt-user-inner
+    font-weight 400
+  .gt-popup
+    margin-top 10px
+    background-color #1d1f21
+    border 1px solid #666
+    border-radius 4px
+  .gt-action:hover, .gt-link-project:hover
+    color #3eaf7c
+  .gt-copyright
+    border-top 1px solid #828282
+  .gt-btn, .gt-btn:hover
+    background-color #3eaf7c
+  .gt-comment-admin
+    .gt-comment-content
+      background-color hsla(0,0%,100%,.1)
+      border-radius 4px
+    .gt-comment-content:hover
+      box-shadow: 0 0 0 0
+  .gt-comment-body
+    color #ddd !important
+  .gt-comment-username, .gt-comment-username:hover
+    color #aaa
+  a, a.is--active, a.is--active:hover, a:hover
+    color #3eaf7c
+
 @media (max-width 600px)
   .item-view-header
     h1
       font-size 1.25em
+  .gt-comment-text, .gt-comment-date
+    display none
