--- a/src/views/ItemList.styl
+++ b/src/views/ItemList.styl
@@ -1,6 +1,21 @@
 .repos-view
   padding-top 4px
 
+.empty-issue
+  padding 15px 30px
+  line-height 2em
+  a
+    color #3eaf7c
+  code
+    border-radius 2px
+    border 1px dotted #666
+    color #d4d5d6
+    padding .25rem .5rem
+    margin 0
+    font-size .85em
+    background-color rgba(27,31,35,.05)
+    border-radius 3px
+
 .list-nav, .list
   border-radius 2px
 
